# libsrc-mcp

./: .gitignore  LICENSE  PLAN.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: deps-dev-api.md  gradle-dependencies.md  maven-dependencies.md  mcp-auto-install.md  pip-dependencies.md  poetry-dependencies.md  uv-dependencies.md
src/libsrc/: __main__.py  cache.py  config.py  git.py  installer.py  models.py  server.py  source_resolver.py  worktree_tracker.py
src/libsrc/ecosystems/: __init__.py  gradle.py  maven.py  poetry.py  uv.py
systemd/: libsrc-mcp.service  libsrc.service
tests/: test_normalize_repo_url.py  test_tag_matching.py
